--- a/README.rdoc
+++ b/README.rdoc
@@ -1,44 +1,54 @@
 = Format Alias
 
+Provides virtual attributes to get or set certain model values (like
+dates) in human readable/localized format.
+
 = Installation
 
 Include following line in your Gemfile:
 
-  gem 'format_alias'
-  
+```
+gem 'format_alias'
+```
+
 = Usage
 
 == Date formatting
 
 Useful when you want user to input formatted dates.
 
-  class News < ActiveRecord::Base
-    date_format_alias :created_at, '%d/%m/%Y'
-  end
+```ruby
+class Foo < ActiveRecord::Base
+  date_format_alias :created_at, '%d/%m/%Y'
+end
 
-  item = News.new
-  item.created_at_formatted = '12.01.2001'
-  item.created_at # 2001-01-12
+bar = Foo.new
+bar.created_at_formatted = '12.01.2001'
+bar.created_at # 2001-01-12
+```
 
 == Setting polymorphic attribute.
 
-  Useful when you want to set variables from such select:
+Useful when you want to set variables from such select:
 
-    <select name="imageable">
-      <option value="Image:3">Image</option>
-      <option value="Banner:1">Banner</option>
-      ...
-    </select>
+```html
+<select name="imageable">
+  <option value="Image:3">Image</option>
+  <option value="Banner:1">Banner</option>
+  ...
+</select>
+```
+```ruby
+class Foo < ActiveRecord::Base
+  belongs_to :imageable, :polymorphic => true
 
-    class News < ActiveRecord::Base
-      belongs_to :imageable, :polymorphic => true
-    
-      polymorphic_alias :imageable
-    end
-  
-    item = News.new
-    item.imageable = "Image:3"
-    item.imageable_id   # 3
-    item.imageable_type # Image
-  
-= To be continued...
+  polymorphic_alias :imageable
+end
+
+bar = Foo.new
+bar.imageable = "Image:3"
+bar.imageable_id   # 3
+bar.imageable_type # Image
+```
+
+= Roll your own
